--- a/day2-am/Lab2_Car_ObjectDetection(exercise)_v3.ipynb
+++ b/day2-am/Lab2_Car_ObjectDetection(exercise)_v3.ipynb
@@ -51,6 +51,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First goto the upper right corner of the jupyter notebook, select the pre-installed python virtual environment.\n",
+    "Look for python virtual environment with the name tf1env. Select this for our lab exercise. \n",
+    "\n",
+    "![image](https://www.linkpicture.com/q/tf1env.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "DAdHp9orDa6_"
@@ -62,14 +72,14 @@
     "\n",
     "It is stored in the following dataset directory.\n",
     "\n",
-    "For train data, it store in the path ./dataset/Lab2dataset/data/train.\n",
+    "For train data, it is stored in the path ./dataset/Lab2dataset/data/train.\n",
     "```\n",
     "./dataset/Lab2dataset/data/train\n",
     "                           |- annotations\n",
     "                           |- images\n",
     "                   \n",
     "```\n",
-    "For train data, it store in the path ./dataset/Lab2dataset/data/validation.\n",
+    "For train data, it is stored in the path ./dataset/Lab2dataset/data/validation.\n",
     "```\n",
     "./dataset/Lab2dataset/data/validation \n",
     "                           |- annotations\n",
@@ -84,19 +94,10 @@
    "source": [
     "### Exercise\n",
     "\n",
-    "At the upper right corner of the jupyter notebook, select the pre-installed python virtual environment.\n",
-    "Look for python virtual environment with the name tf1env. Select this for our lab exercise. \n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/tf1env.jpg)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "Try to display different images with the following code.\n",
     "\n",
-    "- Set the path to the train image eg. data_path_train_images\n",
-    "- Set the file name eg.img1.jpg\n",
-    "- The complete string for the path and file will be eg.  data_path_train_images+'img1.jpg'\n",
+    "- Set image directory and file name in the imread() function eg.  data_path_train_images+'img1.jpg'\n",
     "\n",
     "If you can do so, that means the dataset is copied correctly into the lab directory.\n"
    ]
@@ -141,8 +142,9 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
+    "\n",
     "# TODO: complete the code below\n",
-    "img = mpimg.imread(#add code - train path and image file name)\n",
+    "img = mpimg.imread(#add code - train directory and image file name)\n",
     "plt.imshow(img)"
    ]
   },
@@ -157,95 +159,14 @@
     "\n",
     "In this section we will try to practice how to label and annotate image data. With the help of the LabelImage application, we can label the object and define bounding box parameters.\n",
     "\n",
-    "This execrise will be running on the local computer with the Window OS.\n"
+    "This exercise will be running on the local computer with the Window OS.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
-    "\n",
-    "1. In local computer command prompt type labelImg, the labelImage application will launch.\n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/labelimage_1.jpg)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "2. Use the internet browser download a image(jpg) eg. image.jpg with cars insides.\n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/images_141.jpg)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "3. In labelImage application,select menu Open. Then look for the downloaded image file name eg. image.jpg. Select file and click Open.\n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/labelimage_2.jpg)\n",
-    "\n",
-    "\n",
-    "4. Once the image is loaded. Goto menu Edit select Create RectBox. Use the curser to draw a box to house the car inside.\n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/labelimage_3.jpg)\n",
-    "\n",
-    "\n",
-    "5. Enter the label name for the object in the box and click on OK button. In the case, our object will car(label).\n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/labelimage_4.jpg)\n",
-    "\n",
-    "6. Repeat the step 5 and 6 to complete the annotation of the other cars in the image.\n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/labelimage_5.jpg)\n",
-    "\n",
-    "7. Select menu File and set the annotation output to be PascalVOC. It is the format for the label and bounding box parameters to be stored in the XML file.\n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/labelimage_6.jpg)\n",
-    "\n",
-    "\n",
-    "8. Select menu File and choose Save. \n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/labelimage_7.jpg)\n",
-    "\n",
-    "\n",
-    "9.  At the dialog box, you will see a XML file name with the same name as your image file. Click on Save button, a XML file will save into the same directory where your image is.\n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/labelimage_8.jpg)\n",
-    "\n",
-    "\n",
-    "Open up the xml file with any text editor to observe the content inside it.\n",
-    "\n",
-    "Can you find where is the label and annotation parameters for each of the car?\n",
-    "<details><summary>Click here for answer</summary> \n",
-    "<br/>\n",
-    "    The car label is stored inside the XML tag name \n",
-    "    \n",
-    "    ```\n",
-    "    \n",
-    "    <name>car</name>\n",
-    "    \n",
-    "    \n",
-    "    ```\n",
-    "\n",
-    "    The bounding box is stored inside the XML tag name \n",
-    "    \n",
-    "    ```\n",
-    "    <bndbox>\n",
-    "\t\t\t<xmin>36</xmin>\n",
-    "\t\t\t<ymin>22</ymin>\n",
-    "\t\t\t<xmax>189</xmax>\n",
-    "\t\t\t<ymax>118</ymax>\n",
-    "\t</bndbox>\n",
-    "\n",
-    "    ```\n",
-    "\n",
-    "<br/>\n",
-    "</details>\n",
-    "\n",
-    "This exercise let us have a feel how to do the image annotation to prepare data for object detection training. It is a tedious process to complete for all the images. Due time constraint we will use the dataset that is copied in the VM to do the rest of the lab."
+    "Link to [Annotation exercise](Lab2_Annotation.md)"
    ]
   },
   {
@@ -257,9 +178,9 @@
    "source": [
     "# **3. Train the model with the training set and evaluate it performance**\n",
     "\n",
-    "YOLO is very popular because it achieves high accuracy while also being able to run in real-time. The algorithm “only looks once” at the image in the sense that it only requires the image or the video to pass through the neural network once to make predictions.\n",
+    "YOLO(Your Only Look Once) is very popular because it achieves high accuracy while also being able to run in real-time. The algorithm “only looks once” at the image in the sense that it only requires the image or the video to pass through the neural network once to make predictions.\n",
     "\n",
-    "With YOLO, a single CNN simultaneously predicts multiple bounding boxes and class probabilities for those boxes. This basically means they recognize where the object is at and uses bounding boxes to show where it is at, and uses class probability to determine what the object is.\n",
+    "With YOLO, a single CNN simultaneously predicts multiple bounding boxes and class probabilities for those boxes. This means they recognize where the object is at and uses bounding boxes to show where it is at, and uses class probability to determine what the object is.\n",
     "\n",
     "\n",
     "![image](https://www.linkpicture.com/q/yolo_1.png)\n"
@@ -272,40 +193,39 @@
     "id": "fks1o7zc83IX"
    },
    "source": [
-    "### Execrise\n",
+    "### Exercise\n",
     "\n",
     "In this exercise we are going to define the Custom YOLO Object Detection model and perform training.\n",
     "\n",
     "We will reuse a YOLO pre-trained model in our problem, this is also known as transfer learning. Transfer learning exploits the knowledge gained from a previous task to improve generalization about another. \n",
     "\n",
-    "- Set the image dataset path for the training. Remember we have copy our dataset to the directory /dataset/Lab2dataset/data/train previously. Define the path inside the function trainer.setDataDirectory(data_directory= path)\n",
+    "Complete the following steps to add the codes.\n",
+    "\n",
+    "- Set the image dataset directory for the training. Remember we have copy our dataset to the directory /dataset/Lab2dataset/data/train previously. Define the directory inside the function trainer.setDataDirectory(data_directory= directory)\n",
     "\n",
     "   \n",
     "- Set our YOLO object detection model training parameters in the following function \n",
     "```\n",
-    "trainer.setTrainConfig(object_names_array=[#add code], batch_size=#add code, num_experiments=#add code, train_from_pretrained_model=car_dir_path+\"pretrained-yolov3.h5\")\n",
+    "trainer.setTrainConfig()\n",
     "```\n",
     "\n",
     "    *   object_names_array : this is an array containing the names of the objects in our dataset(in our case we labeled it car) eg. ['car']\n",
-    "    *   batch_size : this is to state the batch size for the training\n",
-    "    *   num_experiments : this is to state the number of times the network will train over all the training images, which is also called epochs\n",
-    "    *   train_from_pretrained_model : this is to train using transfer learning from a pre-trained YOLOv3 model\n",
+    "    *   batch_size : The batch size allow large dataset to be able to load into the model for training\n",
+    "    *   num_experiments : The number of times the network will train over all the training images, which is also called epochs\n",
+    "    *   train_from_pretrained_model : pre-trained YOLOv3 model file name\n",
     "\n",
     "\n",
     "\n",
-    "Observe the training loss result by applying different epoch(num_experiements).\n",
-    "\n",
-    "What happen to the loss if the epoch increase?\n",
+    "- Set the num_experiements=5 and run the training. Use the Jupyter file browser, goto directory './dataset/Lab2dataset/models/'. How many weigths files are stored in the directory? How do you know which weight is the best trianed model?\n",
     "<details><summary>Click here for answer</summary> \n",
     "<br/>\n",
-    "Typically the increase in the number of iterations of the training will help to reduce the loss. Therefore the accuracy of the prediction will increase.\n",
+    "There are 5 files beacause we setted the iterations to be 5.\n",
+    "The file name is form using iteration number and the loss value.\n",
+    " eg. detection_model-ex-025--loss-0005.643.h5\n",
+    " From the smallest loss value of the file name we can determine which is the best weights. \n",
     "<br/>\n",
     "</details>\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "The trained weights file is recorded with the number of epoch and the loss value eg. detection_model-ex-025--loss-0005.643.h5. \n",
     "\n",
     "You can use these different trained weights to test the prediction in the next exercise.\n"
    ]
@@ -357,30 +277,27 @@
     "### Exercise\n",
     "For this exercise, we will load the trained weight into the YOLO neural network and perform the prediction.\n",
     "\n",
-    "- Choose one of the weights file from the previous exercise. Assign the file path and file name in the following YOLO neural network function. eg. models_path+'detection_model-ex-009--loss-0016.248.h5'\n",
+    "- Choose one of the weights file from the previous exercise. Choose weights with ex-005, assign the directory and file name in the following YOLO neural network function. eg. models_path+'detection_model-ex-005--loss-0016.248.h5'\n",
     "```\n",
-    "detector.setModelPath(file path + file name)\n",
+    "detector.setModelPath()\n",
     "```\n",
-    "- Assign the unknow image file path and file name to the following YOLO neural network function. Define a file path and different file name to store predicted result. eg. data_dir_path+'image5.jpg'\n",
+    "- Assign the prediction image directory and file name to the following YOLO neural network function. Give a directory and different file name to store the predicted result. eg. data_dir_path+\"image1.jpg\"\n",
     "```\n",
-    "detector.detectObjectsFromImage(input_image=file path + file name, output_image_path=file path + different file name)\n",
+    "detector.detectObjectsFromImage()\n",
     "```\n",
     "\n",
     "\n",
-    "Run the prediction and observe the result label name, probability and box_points.\n",
-    "\n",
-    "What are all there predicted results represent?\n",
-    "\n",
+    "- Run the prediction and observe the output. What do the 3 values represent on each line? \n",
     "<details><summary>Click here for answer</summary> \n",
     "<br/>\n",
+    "the 3 values are label name, probability and bounding box. \n",
     "The label name shows the object being classified and the probability displayed how confidence the object being predicted. And the box points show the localization of the object using the bottom left coordinate and the upper right coordinate to form a bounding box.\n",
     "<br/>\n",
     "</details>\n",
     "\n",
+    "- Display the image with the predicted result. Add predicted result directory and output image file name to the imread() function(You can find it from the above detector.detectObjectsFromImage() function).\n",
     "\n",
-    "\n",
-    "Try with another weights with lower loss value and compare the results.\n",
-    "Observe the probability and the postion of the bounding box.\n"
+    "\n"
    ]
   },
   {
@@ -422,7 +339,23 @@
     "# TODO: complete the code below\n",
     "detections = detector.detectObjectsFromImage(input_image=#add code, output_image_path=#add code)\n",
     "for detection in detections:\n",
-    "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])"
+    "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])\n",
+    "\n",
+    "# TODO: complete the code below                                              \n",
+    "img = mpimg.imread(#add code - directory and output image file name)\n",
+    "plt.imshow(img)   \n",
+    "                            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you have loaded the weights into the YOLO model, you can continue to use it to predict other images.\n",
+    "\n",
+    "- Assign another prediction image directory and file name to the following YOLO neural network function. Give a directory and different file name to store the predicted result.eg. data_dir_path+\"image2.jpg\"\n",
+    "\n",
+    "- Display the image with the predicted result. Add directory and output image file name from prediction to the imread() function."
    ]
   },
   {
@@ -450,9 +383,61 @@
    },
    "outputs": [],
    "source": [
-    "detections = detector.detectObjectsFromImage(input_image=data_dir_path+\"image5.jpg\", output_image_path=data_dir_path+\"image5a-detected.jpg\")\n",
+    "detections = detector.detectObjectsFromImage(input_image=#add code, output_image_path=#add code)\n",
     "for detection in detections:\n",
-    "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])"
+    "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])\n",
+    "\n",
+    "img = mpimg.imread(#add code - directory and output image file name)\n",
+    "plt.imshow(img)\n",
+    "                                             "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try with the given pre-trained weights(trained_detection_model-ex-025--loss-0005.643.h5) with lower loss value compare with the previous step. \n",
+    "Compare the probability and the postion of the bounding box with the ones predicted by the model using epoch 5 weights.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detector = CustomObjectDetection()\n",
+    "detector.setModelTypeAsYOLOv3()\n",
+    "\n",
+    "# TODO: complete the code below\n",
+    "detector.setModelPath(#add code)\n",
+    "\n",
+    "detector.setJsonPath(data_dir_path+\"json/detection_config.json\")\n",
+    "\n",
+    "detector.loadModel()\n",
+    "\n",
+    "# TODO: complete the code below\n",
+    "detections = detector.detectObjectsFromImage(input_image=#add code, output_image_path=#add code)\n",
+    "for detection in detections:\n",
+    "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])\n",
+    "\n",
+    "img = mpimg.imread(#add code - directory and output image file name)\n",
+    "plt.imshow(img)\n",
+    "                                             "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detections = detector.detectObjectsFromImage(input_image=#add code, output_image_path=#add code)\n",
+    "for detection in detections:\n",
+    "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])\n",
+    "\n",
+    "img = mpimg.imread(#add code - directory and output image file name)\n",
+    "plt.imshow(img)"
    ]
   }
  ],
@@ -478,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
