--- a/day1-pm/ids_autoencoder_v3.ipynb
+++ b/day1-pm/ids_autoencoder_v3.ipynb
@@ -866,9 +866,9 @@
     "\n",
     "The first loss function is the MSE (mean-squared-error or mse) loss which is computed from the differences between predicted output and expected output.\n",
     "\n",
-    "\\begin{equation*}\n",
-    "\\frac{1}{m}\\sum_{i=1}^m (\\hat{y}_{i} - y_i)^2\n",
-    "\\end{equation*}\n",
+    "\n",
+    "$$\\frac{1}{m}\\sum_{i=1}^m (\\hat{y}_{i} - y_i)^2$$\n",
+    "\n",
     "\n",
     "where $\\hat{y}$ is the predicted output and $y$ is the actual value. \n",
     "\n",
