--- a/day1-pm/video-anomaly-v2.ipynb
+++ b/day1-pm/video-anomaly-v2.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://www.nyp.edu.sg/content/dam/nyp/logo.png\" width='200'/>\n",
+    "<a href=\"https://colab.research.google.com/github/nyp-sit/mindef-ai/blob/main/day1-pm/video-anomaly-v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://www.nyp.edu.sg/content/dam/nyp/logo.png\" width=\"238\" height=\"70\"/>\n",
     "\n",
     "Welcome to the lab! Before we get started here are a few pointers on Jupyter notebooks.\n",
     "\n",
@@ -591,7 +598,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.8 (tf2env)",
+   "display_name": "tf2env",
    "language": "python",
    "name": "tf2env"
   },
@@ -605,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
