--- a/day1-pm/video-anomaly-exercise-v2.ipynb
+++ b/day1-pm/video-anomaly-exercise-v2.ipynb
@@ -24,6 +24,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget -q https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/codes/dataset_util.py"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
