--- a/day1-pm/video-anomaly-v2.ipynb
+++ b/day1-pm/video-anomaly-v2.ipynb
@@ -74,7 +74,8 @@
         "# Video Anomaly Detection \n",
         "                                                             \n",
         "<center>\n",
-        "    <img src=\"https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/resources/video-anomaly.png\" height=\"267\" width=\"500\" style=\"vertical-align:middle;margin:10px 20px\"/><center>\n",
+        "    <img src=\"https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/resources/video-anomaly.png\" height=\"267\" width=\"500\" style=\"vertical-align:middle;margin:10px 20px\"/>\n",
+        "</center>\n",
         "                \n",
         "\n",
         "In this lab, we will build an anomaly detector that can help to detect unusual activities in video frames. We will make use of two sets of videos: one set of videos contains only normal pedestrian traffic, and another set of videos contains anomalous activities, such as someone riding a bicycle or a car moving through the scene. We will train an autoencoder model to learn what is normal pedestrian traffic and then use it to detect unusual activities.\n"
