Update codes to use colab

--- a/day2-pm/lab2/day2pm_lab2_colab_exercise.ipynb
+++ b/day2-pm/lab2/day2pm_lab2_colab_exercise.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Dt_YYyPhYZ30"
+   },
    "source": [
     "<img src=\"https://www.nyp.edu.sg/content/dam/nyp/logo.png\" width='200'/>\n",
     "\n",
@@ -29,9 +31,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "ckctkt0DYZ31",
+    "outputId": "94d9bb34-9a40-4606-e73b-0bebf70777a3"
+   },
    "outputs": [],
    "source": [
+    "!wget https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/datasets/day2-pm/lab2/lab2.zip\n",
+    "!unzip lab2.zip\n",
+    "\n",
     "from helpers import *\n",
     "print (\"Import helpers complete.\")"
    ]
@@ -52,11 +63,10 @@
    "execution_count": null,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 168
+     "base_uri": "https://localhost:8080/"
     },
     "id": "OSav2mIAFzWy",
-    "outputId": "5c3c16c0-9e96-444c-bd37-549ff93395b7"
+    "outputId": "bec7fe24-7198-4d5e-803d-e2d37e579781"
    },
    "outputs": [],
    "source": [
@@ -65,15 +75,17 @@
     "# input text, and the output label class, and some maximum limits\n",
     "#\n",
     "load_text_data_from_csv(\n",
-    "    \"???\",                              # CSV File to load the training data from\n",
-    "    \"???\",                              # CSV File to load the test data from\n",
-    "    \"???\",                              # Column name of the CSV that contains the input text\n",
-    "    \"???\")                              # Column name of the CSV that contains the class\n"
+    "    \"???\",                           # The training CSV file\n",
+    "    \"???\",                           # The test CSV file\n",
+    "    \"???\",                           # The column in the CSV used as the input text\n",
+    "    \"???\")                           # The column in the CSV used as the output classification label"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "6TvkwdtRYZ37"
+   },
    "source": [
     "Run the following cell to see how the data loaded from the CSV files look like, when it's stored in Python variables."
    ]
@@ -81,7 +93,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "ZNcma73kYZ38",
+    "outputId": "cbf0152a-9089-4a91-ce56-7d47c11809eb"
+   },
    "outputs": [],
    "source": [
     "display_trainx_trainy()"
@@ -89,13 +107,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "p6VmPtCMYZ3-"
+   },
    "source": [
     "## Section 2.2 - Build a Word Dictionary and Tokenize Text\n",
     "\n",
     "Let's review the various stages in our Text Classification task using Deep Learning. The first step is to go through our text processing to tokenize a string of text into individual words. Then we convert each word into Word Embeddings. Next, we pass the sequence of words into a Recurrent Neural Network which then computes a series of features before sending that into a Fully Connected dense layer for classification. \n",
     "\n",
-    "<img src=\"files/textclass_dl.PNG\" />\n",
+    "<img src=\"https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/resources/day2-pm/textclass_dl.PNG\" />\n",
     "\n",
     "---\n",
     "\n",
@@ -111,7 +131,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "s-GAVO-8YZ3_",
+    "outputId": "37dcd246-f4e0-4c7a-ffab-e4ebc5e3166b"
+   },
    "outputs": [],
    "source": [
     "# Split and tokenize all the strings into individual word index\n",
@@ -127,7 +153,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "uUlkT_ZSYZ4B"
+   },
    "source": [
     "Run the cell below to see how our sentences now look like.\n",
     "\n",
@@ -137,7 +165,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "LNZ8PZcPYZ4B",
+    "outputId": "d0a7e5a8-a74f-4225-a3cf-2871739c3c62"
+   },
    "outputs": [],
    "source": [
     "display_trainx_trainy()"
@@ -145,7 +179,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "xTLHhIHaYZ4D"
+   },
    "source": [
     "## Section 2.3 - Load the Glove Word Embeddings\n",
     "\n",
@@ -161,7 +197,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "5AZFQY8DYZ4E",
+    "outputId": "f0d93448-be3e-458d-cf6c-973aa3447fcb"
+   },
    "outputs": [],
    "source": [
     "# TODO:\n",
@@ -172,7 +214,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "pKHjoaC-YZ4G"
+   },
    "source": [
     "Replace the ??? with any known English word, and run the following cell to see how a real word embedding looks like."
    ]
@@ -180,7 +224,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "bMKCXfRcYZ4H",
+    "outputId": "ec0907ca-3760-4055-b522-27b91eca504a"
+   },
    "outputs": [],
    "source": [
     "# TODO:\n",
@@ -191,7 +241,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "IbOfuF-aYZ4J"
+   },
    "source": [
     "Humans can visualize nearby words if we wrote all of them in Post-Its and pasted them in a 2-dimensional flipchart. But in practice, we need more than 2 dimensions to capture meaning in a word. The Glove Embedding that we use captures 200 dimensions of numbers per word. We won't be able to visualize nearby words with a 200-dimension representation, but machines will have no problems computing distances of words represented with any number of dimensions. \n",
     "\n",
@@ -203,7 +255,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "oV86g941YZ4J",
+    "outputId": "f57149ef-0d5e-424e-eb7e-6853c1ce9224"
+   },
    "outputs": [],
    "source": [
     "# TODO:\n",
@@ -223,7 +281,7 @@
     "\n",
     "The following creates the Deep Learning model for our Text Classification task. A typical Recurrent Neural Network will look like the following:\n",
     "\n",
-    "<img src=\"files/we_rnn_dl.PNG\" height=\"100\">\n",
+    "<img src=\"https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/resources/day2-pm/we_rnn_dl.PNG\" height=\"300\">\n",
     "\n",
     "The Word Embedding captures the meaning of the words, while the Recurrent Neural Network attempts to make sense of the order and position of the words. \n",
     "\n",
@@ -247,11 +305,10 @@
    "execution_count": null,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 286
+     "base_uri": "https://localhost:8080/"
     },
     "id": "geyYJIUoFzW3",
-    "outputId": "40213176-e6d8-4d0d-c0f2-b6cd581ce2f9"
+    "outputId": "57b8d256-638d-42ab-b613-30ead26ffbdd"
    },
    "outputs": [],
    "source": [
@@ -297,7 +354,7 @@
      "height": 1000
     },
     "id": "9GOPphNXFzW6",
-    "outputId": "e3831a81-8ccc-410f-d222-42c0852f2c1b"
+    "outputId": "11de96e9-35f3-4e47-f146-6c27288a60e1"
    },
    "outputs": [],
    "source": [
@@ -385,11 +442,10 @@
    "execution_count": null,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 67
+     "base_uri": "https://localhost:8080/"
     },
     "id": "_wMECaArFzXG",
-    "outputId": "def6d8ca-fd5f-47be-8629-7a2fae0c5bf1"
+    "outputId": "695226f3-acb8-4ef5-9275-dbe6a8cdd445"
    },
    "outputs": [],
    "source": [
@@ -400,27 +456,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "xZ0zmubPYZ4a"
+   },
    "source": [
     "## Section 2.9 - Explore helpers.py\n",
     "\n",
     "Go ahead again to examine the codes in helpers.py to see how we create the Deep Learning model in Keras."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "accelerator": "GPU",
   "colab": {
    "collapsed_sections": [],
-   "name": "exercise01b-text-classification-deeplearning.ipynb",
-   "provenance": []
+   "name": "day2pm_lab2_colab_exercise_solution.ipynb",
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3",
@@ -441,5 +493,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
