--- a/day2-pm/lab1/day2pm_lab1_colab_exercise.ipynb
+++ b/day2-pm/lab1/day2pm_lab1_colab_exercise.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "IkjYbDqkU8oD"
+   },
    "source": [
     "<img src=\"https://www.nyp.edu.sg/content/dam/nyp/logo.png\" width='200'/>\n",
     "\n",
@@ -33,21 +35,25 @@
    "execution_count": null,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 70
+     "base_uri": "https://localhost:8080/"
     },
     "id": "URDv6NK1_J0N",
-    "outputId": "186969a7-b7c0-4298-b0f4-049d07d63b23"
+    "outputId": "d45edf87-6820-4cb2-842b-34bc5a118025"
    },
    "outputs": [],
    "source": [
+    "!wget https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/datasets/day2-pm/lab1/lab1.zip\n",
+    "!unzip lab1.zip\n",
+    "\n",
     "from helpers import *\n",
     "print (\"Importing helpers complete.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "DCu3FO7JU8oH"
+   },
    "source": [
     "## Section 1.1 - Explore Your Data\n",
     "\n",
@@ -74,11 +80,10 @@
    "execution_count": null,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 67
+     "base_uri": "https://localhost:8080/"
     },
     "id": "cAqxtMB4A2A0",
-    "outputId": "68d90f15-e46e-42c4-a01b-1ee394a37a40"
+    "outputId": "f80d0edb-4c07-4d68-b78b-8ce4f5bb0357"
    },
    "outputs": [],
    "source": [
@@ -93,7 +98,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "L5m0pS7DU8oK"
+   },
    "source": [
     "## Section 1.3 - Display Loaded Data\n",
     "\n",
@@ -105,7 +112,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "ko5a5Gi6U8oL",
+    "outputId": "a6ed61f7-e1d6-42ba-dfb4-7f609e83343e"
+   },
    "outputs": [],
    "source": [
     "display_trainx_trainy()"
@@ -146,7 +159,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "JEXFsxLrU8oP"
+   },
    "outputs": [],
    "source": [
     "# TODO:\n",
@@ -167,7 +182,7 @@
     "\n",
     "This is how the processing pipeline for Natural Language Processing in Scikit-Learn will look like.\n",
     "\n",
-    "<img src=\"files/scikit.PNG\" />\n",
+    "<img src=\"https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/resources/day2-pm/scikit.PNG\" />\n",
     "\n",
     "Once the training is complete, review the results below and look at how well your model is fairing. Take a look at the test data's F1 score, because it is a meaningful metric that tells us how well our model works for data that doesn't exist in the training set.\n"
    ]
@@ -178,10 +193,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 824
+     "height": 1000
     },
     "id": "ZTaoxoA__J0Y",
-    "outputId": "c124829b-6586-4113-ce84-b3ff152af545"
+    "outputId": "c20c40e6-41d9-469d-c879-023a79b41d0c"
    },
    "outputs": [],
    "source": [
@@ -270,11 +285,10 @@
    "execution_count": null,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 67
+     "base_uri": "https://localhost:8080/"
     },
     "id": "HIKDiMip_J0h",
-    "outputId": "29d4905f-2a2c-4c15-a11e-a7aec7895794"
+    "outputId": "6f623ea8-442b-43da-98b4-80e2284ea356"
    },
    "outputs": [],
    "source": [
@@ -285,26 +299,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "zNlm2Z0nU8od"
+   },
    "source": [
     "## Section 1.9 - Explore the helpers.py code\n",
     "\n",
     "Take a look at the code within the helpers.py file to see the codes that load the training and test data, create the Machine Learning model, train the model and perform classification."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "colab": {
    "collapsed_sections": [],
-   "name": "exercise01a-textclassification-scikit.ipynb",
-   "provenance": []
+   "name": "colab-exercise.ipynb",
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3",
@@ -325,5 +335,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
