Updated notebook to remove advise on running in classic notebook.

--- a/day2-pm/lab3/day2pm_lab3_colab_exercise.ipynb
+++ b/day2-pm/lab3/day2pm_lab3_colab_exercise.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "Now, we are going to try using a recording to test our pre-trained Speech Recognition model. \n",
     "\n",
-    "Run the following cell to display an audio recorder panel. You **MUST** run this in the Classic Notebook."
+    "Run the following cell to display an audio recorder panel."
    ]
   },
   {
@@ -1136,7 +1136,7 @@
    "source": [
     "Now, try to record some audio of yourself spelling out words or saying numbers.  \n",
     "\n",
-    "Run the following cell to display an audio recorder panel. You **MUST** run this in the Classic Notebook."
+    "Run the following cell to display an audio recorder panel."
    ]
   },
   {
@@ -10339,5 +10339,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
